--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html,
+body {
+  background-color: black;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  padding-top: 15px;
+  font-family: lato,sans-serif;
 
-.App-link {
-  color: #61dafb;
 }
+.reecodeamp-logo-contenedor {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  margin: 20px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.logoclick {
+  height: 50px;
+}
+.contenedor-principal {
+  height: 550px;
+  min-width:  600px;
+  display: flex;
+  flex-wrap: wrap;
+flex-direction:column;
+align-items: center;
+justify-content: center;
 }
